--- a/detail/styles/detail.scss
+++ b/detail/styles/detail.scss
@@ -309,11 +309,12 @@ body {
     & > div {
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
+      font-size: 1.5rem;
+      margin-top: 10px;
       p {
         font-size: 1.4rem;
         color: map-get($map: $color, $key: gray-999);
-        margin: 30px 0px 0px;
+        margin: 20px 0px 0px;
       }
     }
   }
@@ -606,7 +607,7 @@ body {
       border-radius: 10px;
       object-fit: cover;
       width: 100%;
-      max-width: 930px;
+      max-width: 1050px;
       height: auto;
       aspect-ratio: 930 / 605;
     }
