--- a/styles/res_header.scss
+++ b/styles/res_header.scss
@@ -138,7 +138,7 @@
       nav {
         display: flex;
         .gnb {
-          pointer-events: auto;
+          pointer-events: none;
         }
       }
       .trigger {
