header trigger js update

--- a/styles/res_header.css
+++ b/styles/res_header.css
@@ -114,7 +114,7 @@
     display: flex;
   }
   header .header_inner nav .gnb {
-    pointer-events: none;
+    pointer-events: auto;
   }
   header .header_inner .trigger {
     display: flex;
