--- a/login/styles/mypage.scss
+++ b/login/styles/mypage.scss
@@ -104,7 +104,7 @@ body {
             align-items: center;
             gap: 60px;
             p {
-              width: 80%;
+              width: 70%;
               display: flex;
               align-items: center;
               font-family: map-get($map: $font, $key: pretendard);
@@ -166,6 +166,89 @@ body {
       text-underline-offset: 5px;
       text-align: center;
       cursor: pointer;
+    }
+  }
+}
+
+// modal
+.mypage_modal {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 450px;
+  height: 300px;
+  border-radius: 5px;
+  background: map-get($map: $color, $key: light);
+  .modal_inner {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 30px;
+    h2 {
+      font-size: 3.6rem;
+      font-weight: bold;
+    }
+    .modal_info_before {
+      display: flex;
+      justify-content: space-between;
+      :nth-child(1) {
+        font-size: 2rem;
+        font-weight: bold;
+      }
+      :nth-child(2) {
+        font-size: 2rem;
+      }
+    }
+    .modal_info_after {
+      display: flex;
+      justify-content: space-between;
+      :nth-of-type(1) {
+        font-size: 2rem;
+        font-weight: bold;
+      }
+      :nth-child(2) {
+        font-size: 2rem;
+      }
+    }
+    .modal_buttons {
+      display: flex;
+      justify-content: end;
+      gap: 40px;
+      :nth-child(1) {
+        width: 80px;
+        height: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid map-get($map: $color, $key: main-01);
+        border-radius: 6px;
+        background: map-get($map: $color, $key: light);
+        color: map-get($map: $color, $key: main-01);
+        font-family: map-get($map: $font, $key: pretendard);
+        font-size: 1.4rem;
+        font-weight: bold;
+        cursor: pointer;
+      }
+      :nth-child(2) {
+        width: 80px;
+        height: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: none;
+        border-radius: 6px;
+        background: map-get($map: $color, $key: main-01);
+        color: map-get($map: $color, $key: light);
+        font-family: map-get($map: $font, $key: pretendard);
+        font-size: 1.4rem;
+        font-weight: bold;
+        cursor: pointer;
+      }
     }
   }
 }
