--- a/login/styles/mypage.css
+++ b/login/styles/mypage.css
@@ -82,9 +82,9 @@ header .header_inner nav {
   display: none;
   width: 100%;
   padding: 0 20px;
-  display: none;
 }
 header .header_inner nav .gnb {
+  display: none;
   opacity: 0;
   flex-direction: column;
   background: #fff;
@@ -494,7 +494,7 @@ footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_right
     display: flex;
   }
   header .header_inner nav .gnb {
-    pointer-events: none;
+    pointer-events: auto;
   }
   header .header_inner .trigger {
     display: flex;
@@ -1023,8 +1023,20 @@ body {
   cursor: pointer;
 }
 
+.modal_overlay {
+  display: none;
+  z-index: 3;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+}
+
 .mypage_modal {
   display: none;
+  z-index: 4;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -1048,26 +1060,50 @@ body {
   font-weight: bold;
 }
 .mypage_modal .modal_inner .modal_info_before {
+  width: 100%;
   display: flex;
   justify-content: space-between;
 }
 .mypage_modal .modal_inner .modal_info_before :nth-child(1) {
+  width: 30%;
   font-size: 2rem;
   font-weight: bold;
 }
 .mypage_modal .modal_inner .modal_info_before :nth-child(2) {
+  width: 60%;
   font-size: 2rem;
+  text-align: end;
 }
 .mypage_modal .modal_inner .modal_info_after {
+  width: 100%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 .mypage_modal .modal_inner .modal_info_after :nth-of-type(1) {
+  width: 30%;
   font-size: 2rem;
   font-weight: bold;
 }
-.mypage_modal .modal_inner .modal_info_after :nth-child(2) {
+.mypage_modal .modal_inner .modal_info_after input[type=text] {
+  width: 60%;
   font-size: 2rem;
+  font-family: pretendard;
+  font-weight: normal;
+  border: none;
+  text-align: end;
+}
+.mypage_modal .modal_inner .modal_info_after input[type=text]:focus {
+  outline: none;
+}
+.mypage_modal .modal_inner .modal_info_after input[type=text]:focus::-moz-placeholder {
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
+  opacity: 0;
+}
+.mypage_modal .modal_inner .modal_info_after input[type=text]:focus::placeholder {
+  transition: all 0.3s;
+  opacity: 0;
 }
 .mypage_modal .modal_inner .modal_buttons {
   display: flex;
@@ -1076,31 +1112,31 @@ body {
 }
 .mypage_modal .modal_inner .modal_buttons :nth-child(1) {
   width: 80px;
-  height: 30px;
+  height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid #f37100;
   border-radius: 6px;
-  background: #fff;
-  color: #f37100;
   font-family: pretendard;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   font-weight: bold;
   cursor: pointer;
+  background: #fff;
+  color: #f37100;
+  border: 1px solid #f37100;
 }
 .mypage_modal .modal_inner .modal_buttons :nth-child(2) {
   width: 80px;
-  height: 30px;
+  height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: none;
   border-radius: 6px;
-  background: #f37100;
-  color: #fff;
   font-family: pretendard;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   font-weight: bold;
   cursor: pointer;
+  background: #f37100;
+  color: #fff;
+  border: none;
 }
