--- a/login/styles/mypage.scss
+++ b/login/styles/mypage.scss
@@ -31,6 +31,19 @@
   cursor: pointer;
 }
 
+@mixin modal-button {
+  width: 80px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 6px;
+  font-family: map-get($map: $font, $key: pretendard);
+  font-size: 1.6rem;
+  font-weight: bold;
+  cursor: pointer;
+}
+
 // common
 html {
   font-size: 62.5%;
@@ -171,8 +184,20 @@ body {
 }
 
 // modal
+.modal_overlay {
+  display: none;
+  z-index: 3;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+}
+
 .mypage_modal {
   display: none;
+  z-index: 4;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -194,25 +219,44 @@ body {
       font-weight: bold;
     }
     .modal_info_before {
+      width: 100%;
       display: flex;
       justify-content: space-between;
       :nth-child(1) {
+        width: 30%;
         font-size: 2rem;
         font-weight: bold;
       }
       :nth-child(2) {
+        width: 60%;
         font-size: 2rem;
+        text-align: end;
       }
     }
     .modal_info_after {
+      width: 100%;
       display: flex;
       justify-content: space-between;
+      align-items: center;
       :nth-of-type(1) {
+        width: 30%;
         font-size: 2rem;
         font-weight: bold;
       }
-      :nth-child(2) {
+      input[type="text"] {
+        width: 60%;
         font-size: 2rem;
+        font-family: map-get($map: $font, $key: pretendard);
+        font-weight: normal;
+        border: none;
+        text-align: end;
+        &:focus {
+          outline: none;
+          &::placeholder {
+            transition: all 0.3s;
+            opacity: 0;
+          }
+        }
       }
     }
     .modal_buttons {
@@ -220,34 +264,16 @@ body {
       justify-content: end;
       gap: 40px;
       :nth-child(1) {
-        width: 80px;
-        height: 30px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border: 1px solid map-get($map: $color, $key: main-01);
-        border-radius: 6px;
+        @include modal-button;
         background: map-get($map: $color, $key: light);
         color: map-get($map: $color, $key: main-01);
-        font-family: map-get($map: $font, $key: pretendard);
-        font-size: 1.4rem;
-        font-weight: bold;
-        cursor: pointer;
+        border: 1px solid map-get($map: $color, $key: main-01);
       }
       :nth-child(2) {
-        width: 80px;
-        height: 30px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border: none;
-        border-radius: 6px;
+        @include modal-button;
         background: map-get($map: $color, $key: main-01);
         color: map-get($map: $color, $key: light);
-        font-family: map-get($map: $font, $key: pretendard);
-        font-size: 1.4rem;
-        font-weight: bold;
-        cursor: pointer;
+        border: none;
       }
     }
   }
