--- a/styles/header.scss
+++ b/styles/header.scss
@@ -190,6 +190,9 @@ header {
         .res_magnify {
           display: none;
         }
+        .res_dropdown_input {
+          display: none;
+        }
         .basket {
           position: relative;
           .fa-cart-shopping {
