--- a/styles/res_header.scss
+++ b/styles/res_header.scss
@@ -213,6 +213,7 @@
             margin-bottom: 6px;
             cursor: pointer;
           }
+          // *********************
           .res_dropdown_input {
             opacity: 0;
             visibility: hidden;
@@ -221,7 +222,7 @@
             top: 100px;
             right: 50px;
             padding: 10px;
-            pointer-events: none; // 숨겨졌을 때 클릭 막기
+            pointer-events: none;
 
             &.show {
               opacity: 1;
@@ -240,9 +241,10 @@
             }
 
             &.hidden {
-              display: none; // js로 초기상태에만 사용
+              display: none;
             }
           }
+          // *********************
           .basket {
             .fa-cart-shopping {
               width: 28px;
